--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "conversation-ui"
   ],
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run kill-port && next dev -p 3971",
+    "dev:default": "next dev",
+    "kill-port": "lsof -ti:3971 | xargs kill -9 2>/dev/null || true",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -37,6 +39,10 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.20.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@horizon-ui-brijesh/horizon": "^1.0.12",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.15.0",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -45,6 +51,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -54,16 +61,16 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/supabase-js": "^2.43.4",
     "@vercel/blob": "^0.22.3",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "framer-motion": "^11.2.10",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
-    "openai": "^4.52.7",
+    "openai": "^4.104.0",
     "prisma": "^5.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
